--- a/app/static/quotes/style.css
+++ b/app/static/quotes/style.css
@@ -1,17 +1,13 @@
-body, html {
+body {
     margin: 0;
     padding: 0;
-    font-family: Cambria, "Palatino Linotype", "Book Antiqua", serif;
-    color-scheme: light dark;
-    color: var(--text-color);
-    background: transparent;
-}
-
-.quote-container {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: Cambria, "Palatino Linotype", "Book Antiqua", serif;
+    color: #fff;
+    background: black;
 }
 
 .quote {
@@ -27,16 +23,41 @@ blockquote {
     color: inherit;
 }
 
+/* Markdown elements */
+blockquote ul {
+    text-align: left;
+    list-style-type: disc;
+    padding-left: 2em;
+    margin: 1em 0;
+}
+
+blockquote em {
+    opacity: 0.7;
+}
+
+blockquote code {
+    background: rgba(255, 255, 255, 0.15);
+    padding: 0.1em 0.3em;
+    border-radius: 3px;
+    font-style: normal;
+}
+
+blockquote a {
+    color: inherit;
+    text-decoration: underline;
+    text-decoration-style: dotted;
+}
+
 footer {
-    margin-top: 1.5rem;
+    margin-top: 0.5rem;
     font-size: 1rem;
-    color: var(--subtle-color);
+    color: rgba(255, 255, 255, 0.8);
     font-style: normal;
 }
 
 .category {
     font-size: 0.8em;
-    color: var(--subtle-color);
+    color: rgba(255, 255, 255, 0.7);
     margin-left: 1em;
     font-style: normal;
     opacity: 0.6;
@@ -44,28 +65,15 @@ footer {
 
 .source-link {
     display: inline-block;
-    color: var(--subtle-color);
+    color: rgba(255, 255, 255, 0.7);
     text-decoration: none;
     font-size: 1em;
     font-style: normal;
-    opacity: 0.5;
+    opacity: 0.7;
     transition: opacity 0.2s;
     margin-left: 0.3em;
 }
 
 .source-link:hover {
-    text-decoration: none;
     opacity: 1;
-}
-
-:root {
-    --text-color: #000;
-    --subtle-color: #666;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --text-color: #fff;
-        --subtle-color: #999;
-    }
 }
